<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_constraint"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/card_constraint"
            android:src="@drawable/ic_arrow_back"
            android:scaleType="center"
            android:layout_margin="8dp"
            android:padding="12dp"
            app:borderWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/main_text" />

        <TextView
            android:id="@+id/headerRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:textColor="@color/main_text"
            android:text="@string/header_pag_register"
            android:gravity="center"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageButton
            android:id="@+id/addPhotoButton"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:scaleType="centerCrop"
            android:background="@null"
            android:src="@drawable/ic_photo"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerRegister"
        />

        <TextView
            android:id="@+id/drinkNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:textSize="26sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_drink_name"
            app:layout_constraintTop_toBottomOf="@+id/addPhotoButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/drinkNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:backgroundTint="@color/interactive"
            android:textColorHint="@color/hint_color"
            android:drawableStart="@drawable/ic_local_bar"
            android:drawablePadding="12dp"
            android:textSize="20sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:hint="@string/hint_drink_name"
            app:layout_constraintTop_toBottomOf="@id/drinkNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/ingredientsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:textSize="26sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_ingredients"
            app:layout_constraintTop_toBottomOf="@+id/drinkNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/ingredientsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:backgroundTint="@color/interactive"
            android:textColorHint="@color/hint_color"
            android:drawableStart="@drawable/ic_list"
            android:drawablePadding="12dp"
            android:textSize="20sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:hint="@string/hint_ingredients"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/recipeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:textSize="26sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_recipe"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/recipeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:backgroundTint="@color/interactive"
            android:textColorHint="@color/hint_color"
            android:drawableStart="@drawable/ic_list"
            android:drawablePadding="12dp"
            android:textSize="20sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:hint="@string/hint_recipe"
            app:layout_constraintTop_toBottomOf="@+id/recipeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/alcoholContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:textSize="26sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_alcohol_amount"
            app:layout_constraintTop_toBottomOf="@+id/recipeEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/alcoholContentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:backgroundTint="@color/interactive"
            android:textColorHint="@color/hint_color"
            android:textSize="20sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:hint="@string/hint_alcohol_amount"
            app:layout_constraintTop_toBottomOf="@+id/alcoholContentTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/reviewStarTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:textSize="26sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_star"
            app:layout_constraintTop_toBottomOf="@+id/alcoholContentEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/reviewStarEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:backgroundTint="@color/interactive"
            android:drawableStart="@drawable/ic_star_rate"
            android:drawablePadding="12dp"
            android:drawableTint="@color/golden"
            android:gravity="center"
            android:hint="@string/hint_star"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHint="@color/hint_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewStarTextView" />

        <Button
            android:id="@+id/typeDrinkButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/main_text"
            android:textSize="26sp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_view_types_drink"
            app:layout_constraintTop_toBottomOf="@+id/reviewStarEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/layoutResumeCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/typeDrinkButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtDisplayBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/bg_rounded_gray"
                android:text="Base"
                android:padding="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/txtDisplayTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/bg_rounded_gray"
                android:text="Temp"
                android:padding="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/txtDisplaySize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/bg_rounded_gray"
                android:text="Tamanho"
                android:padding="8dp"
                android:visibility="gone"/>

        </LinearLayout>


        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/back_button"
            android:drawableStart="@drawable/is_save"
            android:drawableTint="@color/black"
            android:text="@string/button_save_drink"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutResumeCategories" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>